--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,13 @@
         "composer/installers": "^2.0",
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
-        "drupal/core-recommended": "^10.2"
+        "drupal/core-recommended": "^10.2",
+        "lcatlett/blt-ddev": "dev-lcatlett-patch-1"
     },
     "conflict": {
         "drupal/drupal": "*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "allow-plugins": {
@@ -95,6 +96,6 @@
         }
     },
     "require-dev": {
-        "thegbomb/blt-ddev": "*"
+        "thegbomb/blt-ddev": "^1.0"
     }
 }
