drupalblt-102: Custom command and front-end hook.

--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -1,2 +1,6 @@
 project:
   machine_name: drupalblt
+command-hooks:
+  frontend-reqs:
+    dir: ${docroot}/themes/custom/custom_theme
+    command: 'npm install'
